--- a/src/app/main/pages/quality/analysis/results/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
@@ -15,8 +15,8 @@
                 <table mat-table [dataSource]="settingsDataSource" >
 
                     <ng-container matColumnDef="order">
-                        <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Nro </th>
-                            <td mat-cell *matCellDef="let element; let i = index"  class="table__cell">
+                        <th mat-header-cell *matHeaderCellDef style="width: 50px !important;"  class="table__cell theader"> Nro </th>
+                            <td mat-cell *matCellDef="let element; let i = index"   style="width: 50px !important;"  class="table__cell">
                             {{
                               1 +
                                 i +
@@ -38,8 +38,8 @@
                     </ng-container>
 
                     <ng-container matColumnDef="areaResponsable">
-                        <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Area responsable </th>
-                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name.name }} </td>
+                        <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Área responsable </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name }} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="state">
@@ -58,10 +58,19 @@
     
                     <ng-container matColumnDef="user">
                         <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Responsable de implemento </th>
-                        <td mat-cell *matCellDef="let element" align="center" class="table__cell"> {{element.user ? element.user.name :'-'}}
+                        <td mat-cell *matCellDef="let element" align="center" class="table__cell"> 
+                            {{element.user ? element.user.name :'-'}}
                         </td>
                     </ng-container>
-                        
+
+                    <ng-container matColumnDef="evidence">
+                        <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Evidencia </th>
+                        <td mat-cell *matCellDef="let element" align="center" class="table__cell"> 
+                            <a [href]="element.url" class="container-file__name" >
+                                {{element.nameFile}}
+                            </a>
+                        </td>
+                    </ng-container>                        
     
                     <tr mat-header-row *matHeaderRowDef="settingsDisplayedColumns"></tr>
                     <tr mat-row *matRowDef="let element; columns: settingsDisplayedColumns;"></tr>
