--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -102,6 +102,18 @@
                         {{element.correctiveActions.length }} </td>
                 </ng-container>
 
+                <ng-container matColumnDef="causeFailure">
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Causante de falla</th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">
+                        {{element.analysis ?element.analysis.causeFailure :'-' }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="process">
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Proceso </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">
+                        {{element.analysis ? element.analysis.process : '-' }} </td>
+                </ng-container>
+
                 <ng-container matColumnDef="riskLevel">
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Nivel de riesgo </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
