--- a/src/app/main/pages/quality/analysis/results/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
@@ -66,7 +66,7 @@
                     <ng-container matColumnDef="evidence">
                         <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Evidencia </th>
                         <td mat-cell *matCellDef="let element" align="center" class="table__cell"> 
-                            <a [href]="element.url" class="container-file__name" >
+                            <a [href]="element.url" target="_blank" class="container-file__name" >
                                 {{element.nameFile}}
                             </a>
                         </td>
