add analysis  en details

--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -28,8 +28,9 @@
                         <span class="corrective-actions__description">{{action.corrective}}</span>
                         <span class="ms-fill"></span>
                         <span class="corrective-actions__area">{{action.name}}</span>
-                    </div>
-                </ng-container> -->
+                    </div>  
+                    </ng-container> 
+                 -->
 
 
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
