--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -84,7 +84,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="miningOperation">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Operacion minera </th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Operación minera </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation?
                         element.miningOperation: '-'}} </td>
                 </ng-container>
