add items analisis en details

--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -102,6 +102,12 @@
                         </mat-error>
                     </mat-form-field>
 
+                    <mat-form-field appearance="outline" class="container__form--input">
+                        <mat-label>Observaciones</mat-label>
+                        <textarea matInput type="text" placeholder="Observaciones" formControlName="observation" rows="2" >
+                        </textarea>
+                    </mat-form-field>
+
                     <br>                              
     
                 </form>
