--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -42,7 +42,11 @@
                 <p><span style="font-weight: bold;"> Calidad:</span> {{data.analysisQuality ? data.analysisQuality : '-'}}</p>
                 <p><span style="font-weight: bold;"> Costo:</span> {{data.analysisCost ? data.analysisCost : '-'}}</p>
                 <p><span style="font-weight: bold;"> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency : '-'}}</p>
-
+                <p><span style="font-weight: bold;"> Nivel de riesgo:</span> {{data.evaluationAnalysisName ? data.evaluationAnalysisName : '-'}}</p>
+                <p><span style="font-weight: bold;"> Causante de falla:</span> {{data.analysis ? data.analysis['causeFailure'] : '-'}}</p>
+                <p><span style="font-weight: bold;"> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
+                <p><span style="font-weight: bold;"> Observacion:</span> {{data.analysis ? data.analysis['observation'] : '-'}}</p>
+                
                 <p class="corrective-actions__title">Imágenes generales</p>
                 <div class="container-image">
                     <picture *ngFor="let item of imagesGeneral; index as i">
