--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -134,7 +134,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>quality
   <ng-template #default>
     <div class="ms-default">
       <mat-progress-bar mode="indeterminate"></mat-progress-bar>
