--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -37,17 +37,29 @@
                     <mat-label>Detalle de evento</mat-label>
                     <input matInput type="text" placeholder="Detalle de evento" formControlName="enventDetail" readonly>
                 </mat-form-field>
-                <br>
-                <h3 class="corrective-actions__title">Análisis</h3>
-                <p><span style="font-weight: bold;"> Calidad:</span> {{data.analysisQuality ? data.analysisQuality : '-'}}</p>
-                <p><span style="font-weight: bold;"> Costo:</span> {{data.analysisCost ? data.analysisCost : '-'}}</p>
-                <p><span style="font-weight: bold;"> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency : '-'}}</p>
-                <p><span style="font-weight: bold;"> Nivel de riesgo:</span> {{data.evaluationAnalysisName ? data.evaluationAnalysisName : '-'}}</p>
-                <p><span style="font-weight: bold;"> Causante de falla:</span> {{data.analysis ? data.analysis['causeFailure'] : '-'}}</p>
-                <p><span style="font-weight: bold;"> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
-                <p><span style="font-weight: bold;"> Observacion:</span> {{data.analysis ? data.analysis['observation'] : '-'}}</p>
-                
-                <p class="corrective-actions__title">Imágenes generales</p>
+
+                <div class="details-title">
+                    <h3>Análisis</h3>
+                    <span class="ms-fill details-title__decoration"></span>
+                </div>
+
+                <p class="analysis-result"><span> Calidad:</span> {{data.analysisQuality ? data.analysisQuality : '-'}}
+                </p>
+                <p class="analysis-result"><span> Costo:</span> {{data.analysisCost ? data.analysisCost : '-'}}</p>
+                <p class="analysis-result"><span> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency :
+                    '-'}}</p>
+                <p class="analysis-result"><span> Nivel de riesgo:</span> {{data.evaluationAnalysisName ?
+                    (data.evaluationAnalysisName + ' (' + data.evaluationAnalisis + ')') : '-'}}</p>
+                <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ?
+                    data.analysis['causeFailure'] : '-'}}</p>
+                <p class="analysis-result"><span> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
+                <p class="analysis-result"><span> Observacion:</span> {{data.analysis ? data.analysis['observation'] :
+                    '-'}}</p>
+
+                <div class="details-title">
+                    <h3>Imágenes generales</h3>
+                    <span class="ms-fill details-title__decoration"></span>
+                </div>
                 <div class="container-image">
                     <picture *ngFor="let item of imagesGeneral; index as i">
                         <a [href]="item" target="_blank" style="cursor: zoom-in">
@@ -56,7 +68,10 @@
                     </picture>
                 </div>
 
-                <p class="corrective-actions__title">Imágenes de detalle</p>
+                <div class="details-title">
+                    <h3>Imágenes de detalle</h3>
+                    <span class="ms-fill details-title__decoration"></span>
+                </div>
                 <div class="container-image">
                     <picture *ngFor="let item of imagesDetail; index as i">
                         <a [href]="item" target="_blank" style="cursor: zoom-in">
@@ -65,7 +80,10 @@
                     </picture>
                 </div>
 
-                <p class="corrective-actions__title">Archivos adicionales</p>
+                <div class="details-title">
+                    <h3>Archivos adicionales</h3>
+                    <span class="ms-fill details-title__decoration"></span>
+                </div>
                 <div class="container-file">
                     <div *ngIf="this.data.fileAdditional; else nofile">
                         <mat-icon>insert_drive_file</mat-icon>
