--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.scss
@@ -62,10 +62,22 @@
     }
 }
 
-.corrective-actions__title {
-    color: #2b2b2b;
-    font-weight: 700;
-    margin-top: 12px;
+.details-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 12px 0px;
+
+    h3 {
+        color: #2b2b2b;
+        font-weight: 700;
+        margin: 0px;
+        margin-right: 8px;
+    }
+
+    &__decoration {
+        border-bottom: dashed 1px rgba(0, 0, 0, 0.2);
+    }
 }
 
 .corrective-actions__list {
@@ -100,6 +112,15 @@
             font-weight: 300;
             margin-right: 8px;
         }
+    }
+}
+
+.analysis-result {
+    color: rgba(0, 0, 0, 0.5);
+
+    span {
+        font-weight: 600;
+        color: rgba(0, 0, 0, 0.7);
     }
 }
 
